feat: update to 1.20.6
also fixes colors being wrong because the circle was rendered thrice lol