@@ -7,7 +7,6 @@ import net.minecraft.client.util.math.MatrixStack;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.util.math.MathHelper;
 import net.uku3lig.hitrange.config.HitRangeConfig;
-import org.joml.Matrix3f;
 import org.joml.Matrix4f;
 
 import java.util.ArrayList;
@@ -57,36 +56,33 @@ public class CircleRenderer extends RenderPhase {
 
     private static void drawCircleLineStrip(MatrixStack matrices, VertexConsumer vertices, float dy, int argb) {
         Matrix4f positionMatrix = matrices.peek().getPositionMatrix();
-        Matrix3f normalMatrix = matrices.peek().getNormalMatrix();
 
         for (Angle angle : angles) {
-            vertices.vertex(positionMatrix, angle.dx, dy, angle.dz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
+            vertices.vertex(positionMatrix, angle.dx, dy, angle.dz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
         }
 
-        Angle first = angles.get(0); // closes the circle
-        vertices.vertex(positionMatrix, first.dx, dy, first.dz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
+        Angle first = angles.getFirst(); // closes the circle
+        vertices.vertex(positionMatrix, first.dx, dy, first.dz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
     }
 
     private static void drawCircleQuad(MatrixStack matrices, VertexConsumer vertices, float dy, int argb) {
         Matrix4f positionMatrix = matrices.peek().getPositionMatrix();
-        Matrix3f normalMatrix = matrices.peek().getNormalMatrix();
 
         for (int i = 1; i < angles.size() + 1; i++) {
             Angle angle = angles.get(i % angles.size());
             Angle prevAngle = angles.get(i - 1);
 
-            vertices.vertex(positionMatrix, prevAngle.dx, dy, prevAngle.dz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
-            vertices.vertex(positionMatrix, prevAngle.farDx, dy, prevAngle.farDz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
-            vertices.vertex(positionMatrix, angle.farDx, dy, angle.farDz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
-            vertices.vertex(positionMatrix, angle.dx, dy, angle.dz).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
+            vertices.vertex(positionMatrix, prevAngle.dx, dy, prevAngle.dz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
+            vertices.vertex(positionMatrix, prevAngle.farDx, dy, prevAngle.farDz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
+            vertices.vertex(positionMatrix, angle.farDx, dy, angle.farDz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
+            vertices.vertex(positionMatrix, angle.dx, dy, angle.dz).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
         }
     }
 
     private static void drawCircleTriangleFan(MatrixStack matrices, VertexConsumer vertices, float dy, int argb) {
         Matrix4f positionMatrix = matrices.peek().getPositionMatrix();
-        Matrix3f normalMatrix = matrices.peek().getNormalMatrix();
 
-        vertices.vertex(positionMatrix, 0, dy, 0).color(argb).normal(normalMatrix, 0.0f, 0.0f, 0.0f).next();
+        vertices.vertex(positionMatrix, 0, dy, 0).color(argb).normal(matrices.peek(), 0.0f, 0.0f, 0.0f).next();
         drawCircleLineStrip(matrices, vertices, dy, argb);
     }
 
@@ -135,7 +131,8 @@ public class CircleRenderer extends RenderPhase {
         );
     }
 
-    // trolling
+    // required for COLOR_PROGRAM, etc.
+    // see #makeLayer
     private CircleRenderer(String name, Runnable beginAction, Runnable endAction) {
         super(name, beginAction, endAction);
     }
